# modules/apps/data-engine/data-engine-rest-api/src/main/java/com/liferay/data/engine/rest/resource/v2_0/DataRecordCollectionResource.java
@@ -100,7 +100,9 @@ public interface DataRecordCollectionResource {
 		throws Exception;
 
 	public Page<com.liferay.portal.vulcan.permission.Permission>
-			putDataRecordCollectionPermission(Long dataRecordCollectionId)
+			putDataRecordCollectionPermissionsPage(
+				Long dataRecordCollectionId,
+				com.liferay.portal.vulcan.permission.Permission[] permissions)
 		throws Exception;
 
 	public String getDataRecordCollectionPermissionByCurrentUser(
